--- a/SI364Midterm/templates/index.html
+++ b/SI364Midterm/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Please enter your name, a stock symbol you'd like to talk about, a date that will reference the stocks data, and your blog content .</h3>
+<h3>Please enter your username, a stock symbol you'd like to talk about, a date that will reference the stocks data, and your blog content .</h3>
 
 <div>
 <form method="POST" action="http://localhost:5000/home">
