--- a/SI364Midterm/templates/results.html
+++ b/SI364Midterm/templates/results.html
@@ -12,6 +12,6 @@
 <h4> Lowest price on this date: {{ final_low }} <h4>
 <p>Blog: {{ blog }} </p>
 
-<a href="{{ url_for('index')}}">Blog about a different stock!</a> <br>
+<a href="{{ url_for('home')}}">Blog about a different stock!</a> <br><pr>
 <a href="https://finance.yahoo.com/quote/AAPL/history?p="+tickers, methods==['POST']>See historical data</a>
 {% endblock %}
